Updates from Overleaf

--- a/report1.tex
+++ b/report1.tex
@@ -27,9 +27,9 @@
 
 \title{Caracterización de sistemas de formación de imágenes}
 
-\author{Adriana \ldots,\authormark{1} Alex G. Recuenco,\authormark{1} and Carlos España Castaño\authormark{1}}
+\author{Adriana Mamani Lazarte{1} Alex G. Recuenco,\authormark{1} and Carlos España Castaño\authormark{1}}
 
-\address{\authormark{1}Universidad Complutense de Madrid, Madrid, DC 28040, España}
+\address{\authormark{1}Universidad Complutense de Madrid, Madrid, PC 28040, España}
 
 \section{Introducción}
 En esta práctica vamos a caracterizar un sistema de formación de imágenes mediante la determinación experimental de su función de transferencia de modulación (MTF). Para ello utilizaremos un método directo (el test de barras) y un método indirecto (el test de borde).
