Updates from Overleaf

--- a/report1.tex
+++ b/report1.tex
@@ -27,7 +27,7 @@
 
 \title{Caracterización de sistemas de formación de imágenes}
 
-\author{Adriana Mamani Lazarte{1} Alex G. Recuenco,\authormark{1} and Carlos España Castaño\authormark{1}}
+\author{Adriana Mamani Lazarte\authormark{1} Alex G. Recuenco\authormark{1}, and Carlos España Castaño\authormark{1}}
 
 \address{\authormark{1}Universidad Complutense de Madrid, Madrid, PC 28040, España}
 
