--- a/report1.tex
+++ b/report1.tex
@@ -96,7 +96,13 @@ La frecuencia, se calcula como:
 
 Donde el periodo, $T$, se obtiene dividiendo la diferencia $x_{\max} - x_{\min}$ entre el número de periodos en ese intervalo.
 
-TODO: Incluir grafica de ejemplo, indicando como se obtinee
+Todas estas medidas se realizan en las imagenes muestradas tomando un perfil y midiendo con matlab 
+
+\begin{figure}[hptb]
+\includegraphics[width=\textwidth]{profile-lines.pdf}
+\caption{TODO DESCRIBE LA FOTO Y EL PROCESO DE SELECCION}
+\label{fig:example}
+\end{figure}
 
 \subsection{Medida de la MTF mediante el test de borde (método indirecto)}
 
