--- a/report1.tex
+++ b/report1.tex
@@ -10,12 +10,15 @@
 \usepackage{physics}
 \usepackage{booktabs}
 \usepackage{tikz}
+
+% Figures and subfigures
+\usepackage{caption}
+\usepackage{subcaption}
+
 \usetikzlibrary{positioning}
 
-\tikzset{>=stealth}
-
 % cref instead of ref
-\usepackage{cleveref}
+% \usepackage{cleveref}
 
 \newcommand{\sinc}{\textrm{sinc}}
 \newcommand\conv{\circledast}
@@ -37,7 +40,7 @@ En esta práctica vamos a caracterizar un sistema de formación de imágenes med
 
 \section{TODO: SETUP, or whichever way you call it}
 
-El sistema cuya MTF mediremos consiste en un objetivo de microscopio con apertura numérica $NA = 0,25$ y un aumento $10X$ (F10), y una cámara CCD con un tamaño de píxel de $s=4,65 \mu m$. Las imágenes captadas por la cámara se visualizarán en la pantalla del PC.
+El sistema cuya MTF mediremos consiste en un objetivo de microscopio con apertura numérica $NA = 0,25$ y un aumento $10\times$ (F10), y una cámara CCD con un tamaño de píxel de $s=4,65 \unit{\micro\meter}$. Las imágenes captadas por la cámara se visualizarán en la pantalla del PC.
 
 \subsection{Fundamento teórico}
 
@@ -49,19 +52,17 @@ El sistema cuya MTF mediremos consiste en un objetivo de microscopio con apertur
 
 \subsection{Medida de MTF mediante el test de barras (método directo)}
 
-\begin{itemize}
-	\item Poner un ejemplo de imagen, y un ejemplo de grafica de contraste, con los $y_{\max/\min}$ y $x_{\max/\min}$
+Utilizando el test USAF 1951 (Fig.~\ref{fig:usaf1951}), y realizamos fotos de cada uno de los distintos elementos de rendijas de la diapositiva, como se indica en la Fig.~\ref{fig:usafpic}. Se controla la exposición para obtener una exposición que nos resuelva todos los colores grises sin sobre-exposición.
 
-\end{itemize}
+Después, se obtiene a través de estas imágenes un perfíl ortogonal a las rendijas de contraste como se indica en Fig.~\ref{fig:example} para cada una de las distintas imágenes. Los resultados se discutirán en la sección~\ref{sec:mtf-directo}.
 
-\subsection{Medida de la MTF mediante el test de borde (método indirecto)}
-\section{Resultados experimentales}
+\begin{figure}[p]
+	\centering
+	\includegraphics[width=0.5\textwidth]{smallest_lines}
+	\caption{Foto tomada durante la práctica de las líneas centrales del test USAF 1951}\label{fig:usafpic}
+\end{figure}
 
-\subsection{Medida de la MTF mediante el test de barras (método directo)}
-
-Utilizamos el test USAF 1951 (Fig.~\ref{fig:usaf1951}):
-
-\begin{figure}[htbp]
+\begin{figure}[htb]
 	\centering
 	\includegraphics[scale=0.05]{testusaf1951}
 	\caption{Test USAF 1951}\label{fig:usaf1951}
@@ -80,7 +81,7 @@ En la tabla~\ref{table:perfilintensidad} se recogen medidas tomadas del perfil d
 	\label{table:perfilintensidad}
 \end{table}
 
-El contraste se ha obtenido a partir de la expresión
+El contraste se ha obtenido a partir de la expresión TODO: MOVER ESTO A FUNDAMENTO TEORICO Y PONER REFERENCIA?
 \nopagebreak
 \begin{equation}
 	C = \frac{y_{\max} - y_{\min}}{y_{\max} + y_{\min}}.
@@ -96,12 +97,46 @@ La frecuencia, se calcula como:
 
 Donde el periodo, $T$, se obtiene dividiendo la diferencia $x_{\max} - x_{\min}$ entre el número de periodos en ese intervalo.
 
-Todas estas medidas se realizan en las imagenes muestradas tomando un perfil y midiendo con matlab, vease un ejemplo en Fig. \ref{fig:example}
+\subsection{Medida de la MTF mediante el test de borde (método indirecto)}\label{sec:description:indirecto}
+
+Se obtiene la imagen de una única barra que abarque el campo completo de visión, dividiendo la imagen ortogonalmente como se puede ver en la Fig.~\ref{fig:perfil:img}
+
+\begin{figure}[hptb]
+	\centering
+	\begin{subfigure}[b]{0.33\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{edge_large_line}
+		\caption{Imagen de una franja amplia}
+		\label{fig:perfil:img}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.25\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{edge_perfil}
+		\caption{Perfil de intensidad de píxeles en una línea horizontal}
+		\label{fig:perfil:graph}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.25\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{edge_perfil}
+		\caption{TODO: Imagen de la derivada del perfil}
+		\label{fig:perfil:lsf}
+	\end{subfigure}
+	\caption{Perfil de intensidad de una franja grande utilizada para el método indirecto para ogtener el MTF, como se describe en la sección~\ref{sec:description:indirecto}}
+	\label{fig:perfil}
+\end{figure}
+
+\section{Resultados experimentales}
+
+\subsection{Medida de la MTF mediante el test de barras (método directo)}\label{sec:mtf-directo}
+
+
 
 \begin{figure}[p]
-\includegraphics[width=\textwidth]{profile-lines.pdf}
-\caption{TODO DESCRIBE LA FOTO Y EL PROCESO DE SELECCION}
-\label{fig:example}
+	\includegraphics[width=\textwidth]{profile-lines.pdf}
+	\caption{TODO DESCRIBE LA FOTO Y EL PROCESO DE SELECCION}
+	\label{fig:example}
 \end{figure}
 
 \subsection{Medida de la MTF mediante el test de borde (método indirecto)}
@@ -112,7 +147,7 @@ Debido a que la función $\delta(x)$ es la derivada de la step function, $s(x),$
 
 \subsection{Sea $H_{c}(u)$ la función de transferencia de un sistema para luz coherente. Escribir la relación entre $H_{c}(u)$ y la función de transferencia del mismo sistema para luz incoherente, $H_{i}(u)$.}
 
-Cuando la luz incidente coherente incide, la resolución es lineal en su amplitud compleja. Sin embargo, cuando la iluminación es incoherente, la iluminación es linear en intensidad. Por ello, en el caso ideal donde la correlación de fase es zero para distintas posiciones, se obtiene que \cite[p.~132--134]{goodman1996introduction}.
+Cuando la luz incidente es coherente, la imagen resultante se obtiene añadiendo linealmente la amplitud compleja. Sin embargo, cuando la iluminación es idealmente incoherente, la iluminación es linear en la intensidad de la onda incidente. Por ello, en el caso ideal donde la correlación de fase es zero para distintas posiciones, se obtiene que \cite[p.~132--134]{goodman1996introduction}.
 
 \begin{equation}
 	I_{i}(u,v) = \kappa \iint_{-\infty}^{\infty}\abs{h(u - \xi, v- \eta)}^{2} I_{g}(\xi, \eta) \dd \xi \dd \eta
@@ -121,35 +156,35 @@ Cuando la luz incidente coherente incide, la resolución es lineal en su amplitu
 Por lo tanto, la funcion $H_{i}(u)$ se puede obtener con el schema descrito en Fig. \ref{fig:transformacion}. Basicamente, haciendo la transformación inversa para obtener $h_{c}$, luego multiplicando esta con su conjugada, obteniendo $h_{i}$, donde $i$ denota intensidad. Y al realizar la transformada inversa obtenemos el resultado.
 
 \begin{align}
-H_{i}(u) 
-	&= TF\{h_i\} 
+	H_{i}(u)
+	 & = TF\{h_i\}
 	= TF\left\{ h_{c} \cdot h^{*}_{c}\right\}
-	= TF\left\{ h_{c} \cdot h^{*}_{c}\right\} 
-	= TF\left\{ TF^{-1}\{H_{c}\} \cdot {TF^{-1}\{H_{c}\}}^{*}\right\} 
+	= TF\left\{ h_{c} \cdot h^{*}_{c}\right\}
+	= TF\left\{ TF^{-1}\{H_{c}\} \cdot {TF^{-1}\{H_{c}\}}^{*}\right\}
 	\\
- &= H_{c} \conv H^{*}_{c}
+	 & = H_{c} \conv H^{*}_{c}
 \end{align}
 
 \begin{figure}[htpb]
-\begin{center}
-\begin{tikzpicture}[line width=0.4mm]
+	\begin{center}
+		\begin{tikzpicture}[line width=0.4mm, >=stealth]
 
-\def \n {5}
-\def \radius {3cm}
-\def \margin {8} % margin in angles, depends on the radius
+			\def \n {5}
+			\def \radius {3cm}
+			\def \margin {8} % margin in angles, depends on the radius
 
-\node (H) at (0,0) {$H_{c}(u)$};
-\node[right=2cm of H] (h) {$h_{c}(u)$};
-\node[below=2cm of h] (hi) {$h_{i}(u)$};
-\node[below=2cm of H] (Hi) {$H_{i}(u)$};
-\draw[->] (H) -- (h) node[pos=0.5, anchor=south] {$TF^{-1}\{H_{c}\}$};
-\draw[->] (h) -- (hi) node[pos=0.5, anchor=west] {$\abs{h_{c}}^{2} = h_{c} \cdot h^{*}_{c}$};
-\draw[->] (hi) -- (Hi) node[pos=0.5, anchor=south] {$TF\{h_{i}\}$};
-\draw[->] (H) -- (Hi) node[pos=0.5, anchor=east] {$H_{c} \conv H^{*}_{c}$};
-\end{tikzpicture}
-\end{center}
-\caption{Diagrama TODO, describirlo mejor}
-\label{fig:transformacion}
+			\node (H) at (0,0) {$H_{c}(u)$};
+			\node[right=2cm of H] (h) {$h_{c}(u)$};
+			\node[below=2cm of h] (hi) {$h_{i}(u)$};
+			\node[below=2cm of H] (Hi) {$H_{i}(u)$};
+			\draw[->] (H) -- (h) node[pos=0.5, anchor=south] {$TF^{-1}\{H_{c}\}$};
+			\draw[->] (h) -- (hi) node[pos=0.5, anchor=west] {$\abs{h_{c}}^{2} = h_{c} \cdot h^{*}_{c}$};
+			\draw[->] (hi) -- (Hi) node[pos=0.5, anchor=south] {$TF\{h_{i}\}$};
+			\draw[->] (H) -- (Hi) node[pos=0.5, anchor=east] {$H_{c} \conv H^{*}_{c}$};
+		\end{tikzpicture}
+	\end{center}
+	\caption{Diagrama TODO, describirlo mejor}
+	\label{fig:transformacion}
 \end{figure}
 
 \subsection[]{Para un sistema parecido al usado en la práctica:
